<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerview_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragment_Reunion">

    <ImageView
        android:id="@+id/item_list_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/room_color"
        android:src="@drawable/ic_baseline_brightness_1_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/item_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:maxWidth="150dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="Reunion A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_picture"
        app:layout_constraintStart_toEndOf="@id/item_list_picture"
        app:layout_constraintTop_toTopOf="@id/item_list_picture" />

    <TextView
        android:id="@+id/item_list_room_nbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_picture"
        app:layout_constraintEnd_toEndOf="@id/item_list_picture"
        app:layout_constraintStart_toStartOf="@id/item_list_picture"
        app:layout_constraintTop_toTopOf="@id/item_list_picture" />

    <TextView
        android:id="@+id/item_list_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="jeaneude@lamzon.com, zqmod@lamzon.com"
        app:layout_constraintBottom_toBottomOf="@id/item_list_picture"
        app:layout_constraintStart_toStartOf="@id/item_list_name"
        app:layout_constraintTop_toBottomOf="@id/item_list_name" />

    <TextView
        android:id="@+id/item_list_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:maxWidth="50dp"
        android:text="14H00"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_picture"
        app:layout_constraintEnd_toStartOf="@id/item_list_creator"
        app:layout_constraintStart_toEndOf="@id/item_list_name"
        app:layout_constraintTop_toTopOf="@id/item_list_picture" />

    <TextView
        android:id="@+id/item_list_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="Yves"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_picture"
        app:layout_constraintStart_toEndOf="@+id/tiret2_pour_contrainte"
        app:layout_constraintEnd_toStartOf="@id/item_list_delete_button"
        app:layout_constraintTop_toTopOf="@id/item_list_picture" />

    <TextView
        android:id="@+id/tiret1_pour_contrainte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:text="-"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_picture"
        app:layout_constraintEnd_toStartOf="@id/item_list_time"
        app:layout_constraintStart_toEndOf="@id/item_list_name"
        app:layout_constraintTop_toTopOf="@id/item_list_picture" />

    <TextView
        android:id="@+id/tiret2_pour_contrainte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:text="-"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_list_picture"
        app:layout_constraintEnd_toStartOf="@id/item_list_creator"
        app:layout_constraintStart_toEndOf="@id/item_list_time"
        app:layout_constraintTop_toTopOf="@id/item_list_picture" />

    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@id/item_list_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_list_name"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

</androidx.constraintlayout.widget.ConstraintLayout>